cmake_minimum_required(VERSION 3.27)
project(PPlearning)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPPlearning main.cpp
        switcher.cpp
        topics.h
        pointers1.cpp
        pointers2.cpp
        random.cpp
        funcParameters.cpp
        arrayInFunc.cpp
        varScope.cpp
        funcOverloading.cpp
        funcPrototypes.cpp
        templates.cpp
        recursion.cpp
        PtrVsRef.cpp
        newOperator.cpp
        constParameters.cpp
        arrayCopy.cpp
        arrayCopy.cpp
        newDynArr.cpp
        strings1.cpp
        typeCast.cpp
        ascii.cpp
        strings2.cpp
        concatination.cpp
        stringLib.cpp
        ptrToFunc.cpp
        predprocess.cpp
        conditCompil.cpp
        ternarOper.cpp
        forRangeLoop.cpp
        stdFunction.cpp
        lambdas.cpp
        runningTime.cpp
        runningTime.cpp
        predicate.cpp)
